Display version number as tabular nums in admin

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -137,6 +137,7 @@ body[class*=fictioneer] {
 
     &-links {
       color: var(--text-600);
+      font-variant-numeric: tabular-nums;
 
       a {
         color: var(--text-400);
