Improve accessibility of story comments list

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -280,7 +280,7 @@
     margin-top: 40px;
   }
 
-  .load-more-comments-button {
+  .load-more-list-item {
     &:not(:first-child) {
       margin-top: 16px;
     }
