Fix chapter expand button in grid view

--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -262,7 +262,7 @@ $header_breakpoint: 640px;
     .chapter-group__list-item._collapse {
       display: block;
       content-visibility: visible;
-      padding: 0;
+      padding: 0 !important;
 
       label {
         display: flex;
