--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -425,7 +425,7 @@
     border-radius: var(--layout-border-radius-small);
     padding: .75rem;
 
-    &:not(:hover) {
+    &:not(:hover, :focus-within) {
       .hide-unless-hover-on-desktop {
         @include bp(desktop) {
           opacity: 0;
@@ -447,9 +447,10 @@
   }
 
   &__author {
+    --focus-offset: -2px;
     font-size: 13px;
     line-height: 1.2;
-    padding-top: 1px;
+    padding-top: 2px;
     margin-bottom: 2px;
 
     > :is(span, a) {
@@ -641,7 +642,13 @@
       position: relative;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 8px;
+      margin-right: -2px;
+
+      > * {
+        padding-left: 2px;
+        padding-right: 2px;
+      }
 
       @include bp(desktop) {
         gap: 8px;
@@ -655,7 +662,7 @@
     color: var(--comment-button-color);
     transition: opacity var(--transition-duration);
 
-    &:not(:hover) {
+    &:not(:hover, :focus-visible) {
       opacity: .2;
     }
   }
@@ -690,7 +697,7 @@
     color: var(--comment-button-color);
     transition: opacity var(--transition-duration);
 
-    &:not(:hover, .on) {
+    &:not(:hover, :focus-visible, .on) {
       opacity: .2;
     }
 
@@ -704,7 +711,7 @@
     color: var(--comment-button-color);
     transition: opacity var(--transition-duration);
 
-    &:not(:hover, .last-clicked) {
+    &:not(:hover, :focus-visible, .last-clicked) {
       opacity: .2;
     }
 
