--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -162,9 +162,9 @@
   --code-background-inline: rgb(0 0 0 / 15%);
   --code-color: var(--fg-800);
   --warning: #f66055;
-  --warning-caption: white;
+  --warning-caption: #fff;
   --success: #7ebb4e;
-  --success-caption: white;
+  --success-caption: #fff;
   --invert-filter: invert(0);
   --red: #ef4d4d;
   --litrpg-bg: var(--fg-400);
@@ -174,6 +174,10 @@
   --litrpg-drop-shadow: var(--container-drop-shadow);
   --lit-rpg-polygon: polygon(8px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0 calc(100% - 8px), 0 8px);
   --paragraph-spacing: 1.5rem; // Fallback if not defined deeper
+
+  // === FOCUS =================================================================
+  --focus-background: var(--red);
+  --focus-outline: 2px solid var(--focus-background);
 
   // === ELEVATIONS ============================================================
   --e-body: var(--bg-1000);
