--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -9,6 +9,26 @@ html:is(:root) {
   -webkit-tap-highlight-color: transparent;
 }
 
+:focus {
+  outline: none;
+}
+
+*:not(input, textarea, .wp-block-file a):focus-visible,
+input:is([type=checkbox], [type=radio], [type=range]):focus-visible,
+.button:focus-visible,
+.card__link-list li:focus-within {
+  border-radius: var(--focus-border-radius, var(--layout-border-radius-small));
+  outline: var(--focus-outline);
+  outline-offset: var(--focus-offset, 0);
+}
+
+// Split off for browsers without support
+.wp-block-file:has(a:focus-visible) {
+  border-radius: var(--focus-border-radius, var(--layout-border-radius-small));
+  outline: var(--focus-outline);
+  outline-offset: var(--focus-offset, 0);
+}
+
 body {
   background: {
     color: var(--e-body);
