--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -70,6 +70,7 @@ body:not(.is-editor):not(.is-admin) {
 }
 
 .truncate {
+  --focus-offset: -2px;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
