--- a/src/scss/_chapter.scss
+++ b/src/scss/_chapter.scss
@@ -223,7 +223,8 @@
       height: 32px;
       opacity: .45;
 
-      &:hover {
+      &:hover,
+      &:focus-visible {
         background: var(--button-secondary-background-hover);
         opacity: 1;
 
