Further improve accessibility
Make more elements tab-able

--- a/src/scss/common/_tabs.scss
+++ b/src/scss/common/_tabs.scss
@@ -8,6 +8,7 @@
   }
 
   &__item {
+    --focus-offset: -2px;
     background: var(--tab-background-inactive);
     color: var(--tab-text-inactive);
     font-size: var(--fs-dxs);
