--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -692,7 +692,7 @@ html:not(.logged-in) body:not(.logged-in) {
 .list-button {
   color: var(--fg-900);
   font-size: var(--fs-s);
-  padding: 5px 4px 4px 8px;
+  padding: 5px 6px 4px;
   transition: color var(--transition-duration);
 
   &:hover {
