--- a/src/scss/_reader-settings.scss
+++ b/src/scss/_reader-settings.scss
@@ -80,6 +80,9 @@
   }
 
   .toggle {
+    --focus-offset: 2px;
+    --focus-border-radius: 50%;
+
     input {
       &:checked + span {
         background: var(--toggle-background-checked);
