--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -14,14 +14,15 @@
   }
 
   .close {
+    --focus-offset: -2px;
     position: absolute;
     top: 5px;
-    right: 8px;
+    right: 4px;
     display: block;
     color: var(--fg-900);
     font-size: 20px;
     line-height: 1;
-    padding: 4px;
+    padding: 4px 8px;
     text-shadow: none;
     transition: color var(--transition-duration);
 
