--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -178,6 +178,8 @@
   // === FOCUS =================================================================
   --focus-background: var(--red);
   --focus-outline: 2px solid var(--focus-background);
+  --focus-box-shadow: inset 0 0 0px 3px rgb(0 0 0 / 75%);
+  --focus-box-shadow-small: inset 0 0 0px 2px rgb(0 0 0 / 75%);
 
   // === ELEVATIONS ============================================================
   --e-body: var(--bg-1000);
