--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -13,10 +13,12 @@ html:is(:root) {
   outline: none;
 }
 
-*:not(input, textarea, .wp-block-file a):focus-visible,
+*:not(input, textarea, .wp-block-file a, .button-unset-oauth):focus-visible,
 input:is([type=checkbox], [type=radio], [type=range]):focus-visible,
 .button:focus-visible,
-.card__link-list li:focus-within {
+.card__link-list li:focus-within,
+.oauth-login-link:focus-within,
+.story__thumbnail:focus-within {
   border-radius: var(--focus-border-radius, var(--layout-border-radius-small));
   outline: var(--focus-outline);
   outline-offset: var(--focus-offset, 0);
