--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -145,6 +145,11 @@
     }
 
     &-toggle {
+      label {
+        --focus-offset: -2px;
+        display: block;
+      }
+
       span {
         display: grid;
         place-content: center;
