Show follows loading spinner on focus

--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -17,7 +17,8 @@
   &__menu {
     position: relative;
 
-    &:hover {
+    &:hover,
+    &:focus-within {
       .follow-menu-item {
         &:not(._loaded) {
           .fa-spinner {
