Fix focus-within issues

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -280,7 +280,13 @@
       min-width: 0; // Fix whitespace nowrap issue
 
       a:focus-visible {
-        outline: none;
+        // outline: none;
+      }
+
+      @supports selector(:has(:focus-visible)) {
+        a:focus-visible {
+          outline: none;
+        }
       }
     }
 
