Add tabindex to wp-image-blocks

--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -248,6 +248,7 @@ figure {
 // =============================================================================
 
 .wp-block-image {
+  --focus-offset: 2px;
   flex-wrap: wrap;
 
   figcaption {
