Update focus border styles

--- a/src/scss/_reader-settings.scss
+++ b/src/scss/_reader-settings.scss
@@ -81,7 +81,7 @@
 
   .toggle {
     --focus-offset: 2px;
-    --focus-border-radius: 50%;
+    border-radius: 50%;
 
     input {
       &:checked + span {
