--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -14,7 +14,7 @@ html:is(:root) {
 }
 
 *:not(input, textarea, select, .wp-block-file a, .button-unset-oauth):focus-visible,
-input:is([type=checkbox], [type=radio], [type=range]):focus-visible,
+input:is([type=checkbox], [type=radio], [type=range], [type=submit]):focus-visible,
 .user-is-tabbing select:focus-visible,
 .user-is-tabbing .tts-interface__voice-selection:focus-within,
 .button:focus-visible,
