Remove some ePUB errors
This format is so annoying!

--- a/src/scss/epub.scss
+++ b/src/scss/epub.scss
@@ -139,6 +139,14 @@ code {
   white-space: nowrap;
 }
 
+span.strike {
+  text-decoration: line-through;
+}
+
+span.underline {
+  text-decoration: underline;
+}
+
 // =============================================================================
 // COVER
 // =============================================================================
