--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -185,7 +185,7 @@
     height: fit-content;
     transition: background-color .1s;
 
-    &:not(:hover, :focus-within) {
+    &:not(:hover) {
       .sub-menu {
         pointer-events: none;
         opacity: 0;
@@ -314,6 +314,21 @@
         font-family: 'Font Awesome 6 Free';
         font-size: .75em;
         font-weight: 900;
+      }
+    }
+  }
+}
+
+.user-is-tabbing {
+  .main-navigation {
+    :is(.menu-item, .page_item) {
+      &:focus-within {
+        background: var(--navigation-item-active-background);
+
+        > .sub-menu {
+          pointer-events: initial;
+          opacity: 1;
+        }
       }
     }
   }
