--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -136,7 +136,8 @@
   --mobile-menu-text-shadow: none;
   --mobile-menu-bookmark-text-shadow: none;
   --mobile-menu-bookmark-progress-background: hsl(var(--bg-1000-free) / 10%);
-  --mobile-menu-current-chapter-text: var(--primary-500);
+  --mobile-menu-current-chapter-text: var(--fg-300);
+  --mobile-menu-current-chapter-background: var(--bg-200);
 
   // === CONTENT ===============================================================
   --blockquote-background: hsl(var(--bg-1000-free) / 5%);
