Remove border from range thumbs in FF

--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -129,6 +129,7 @@ input[type=range] {
   &::-moz-range-thumb {
     cursor: pointer;
     background: var(--input-range-thumb);
+    border: none;
     border-radius: 2px;
     width: 14px;
     height: 14px;
